@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5385 2004/03/31 04:33:04 snj Exp $
+$NetBSD: CHANGES,v 1.5386 2004/03/31 04:39:16 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1625,3 +1625,5 @@ Changes to the packages collection and infrastructure in 2004:
 	Added galeon-devel-1.3.14a [xtraeme 2004-03-30]
 	Updated openldap to 2.1.29 [xtraeme 2004-03-31]
 	Updated vim-kde to 6.2.14 [snj 2004-03-31]
+	Updated xmame to 0.80.1 [xtraeme 2004-03-31]
+	Updated xmess to 0.80.1 [xtraeme 2004-03-31]
